oc/webapp-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: route-for-airflow-web
  labels:
    DataClass: Low
spec:
  host: nr-airflow.apps.emerald.devops.gov.bc.ca
  to:
    kind: Service
    name: airflow
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
  wildcardPolicy: None
