oc/allow-egress-airflow.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-airflow
  namespace: a1b9b0-dev
spec:
  podSelector:
    matchLabels:
      Release: test-release-af
  egress:
    - {}
  policyTypes:
    - Egress
status: {}
