oc/allow-ingress-airflow.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-airflow
  namespace: a1b9b0-dev
spec:
  podSelector:
    matchLabels:
      Release: test-release-af
  ingress:
    - {}
  policyTypes:
    - Ingress
status: {}
