oc/allow-traffic-airflow.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-zone-b
spec:
  podSelector:
    matchLabels:
      ConnectionType: database
  egress:
    - ports:
        - protocol: TCP
          port: 1521
        - protocol: TCP
          port: 5435
        - protocol: TCP
          port: 5436
  policyTypes:
    - Egress
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-traffic-airflow
spec:
  podSelector:
    matchLabels:
      Release: airflow
  ingress:
    - {}
  egress:
    - {}
  policyTypes:
    - Ingress
    - Egress
